--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.5.4"
   },
   "dependencies": {
+    "material-components-web": "^3.2.0",
     "react": "^15.5.4"
   },
   "scripts": {
