--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "babel-preset-env": "^1.5.1",
     "css-loader": "^3.2.0",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.3.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^2.7.0"
   }
 }
